<resources>
    <string name="app_name">Half Of Love</string>
    <string name="signinwithFB">Sign in with Facebook</string>
    <string name="signinwithGG">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgotpassword">I\'ve forgotten my password</string>
    <string name="facebook_app_id">1812584652364083</string>
    <string name="registersuc">Thành công</string>
</resources>
