<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="FIND A PART OF HEART"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/signinwith"
            android:textAllCaps="false"
            android:textStyle="normal" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/signinwith"
            android:textAllCaps="false"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="or" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#e6e7e9"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:padding="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#e6e7e9"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:padding="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="15dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/forgotpassword" />
</LinearLayout>
